Fixed word wrapping on message cards.

--- a/app/src/main/res/raw/style.css
+++ b/app/src/main/res/raw/style.css
@@ -2,6 +2,10 @@
 img{
     max-width: 90%;
 }
+html,body,p{margin:0px; padding:0px;
+            overflow:show;height:100%;
+            word-wrap: break-word;
+}
 html,body{font-family: "Comic Sans MS", cursive, sans-serif;}
 h1,h2,h3,h4,h5,h6{font-family: "Comic Sans MS", cursive, sans-serif;}
 
